<?xml version="1.0"?>
<package>
  <name>rg2ft_lib</name>
  <version>0.0.0</version>
  <description>The rg2ft gripper package</description>

  <maintainer email="todo@todo.todo">slifer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>gtest</test_depend>

  <export></export>
</package>
